--- a/ex2_LQR/2.1_linear_quadratic_regulator.ipynb
+++ b/ex2_LQR/2.1_linear_quadratic_regulator.ipynb
@@ -319,7 +319,7 @@
     "\n",
     "3\\) Instantiate the class `Simulator` and call function `run_simulation()` to generate the simulated state- and input-trajectory.\n",
     "\n",
-    "4\\) Instantiate the class `Visualizer`, call functions `display_final_results()` and `display_animation()` to show the simulations.\n"
+    "4\\) Instantiate the class `Visualizer`, call functions `display_plots()` and `display_animation()` to show the simulations.\n"
    ]
   },
   {
@@ -476,13 +476,13 @@
     "\n",
     "    i) weight for state $\\boldsymbol{Q} = \\text{diag}([1, 1])$ (requirement: symmetric, positive semi-definite matrix)  \n",
     "\n",
-    "    ii) weight for input $\\boldsymbol{R} = [0.1]$ (requirement: symmetric, positive definite matrix)  \n",
+    "    ii) weight for input $\\boldsymbol{R} = 0.1$ (requirement: symmetric, positive definite matrix)  \n",
     "    \n",
     "    iii) control frequency $f = 20$\n",
     "\n",
     "3\\) Instantiate the class `Simulator` and call function `run_simulation()` to generate the simulated state- and input-trajectory.\n",
     "\n",
-    "4\\) Instantiate the class `Visualizer`, call functions `display_final_results()` and `display_animation()` to show the simulations.\n"
+    "4\\) Instantiate the class `Visualizer`, call functions `display_plots()` and `display_animation()` to show the simulations.\n"
    ]
   },
   {
@@ -538,7 +538,7 @@
    "source": [
     "### **Part 3: Impact of Weight Matrices on System Behavior**\n",
     "\n",
-    "In this section, we will analyze how the choice of weight matrices in the cost function affects the performance of the LQR. By tuning the weight matrices $\\boldsymbol{Q}$ (which penalize deviations in state) while keeping $\\boldsymbol{R}$ (which penalizes control input) fixed, we can observe how the system behaves under different control strategies.\n",
+    "In this section, we will analyze how the choice of weight matrices in the cost function affects the performance of the LQR. By tuning the weight matrix $\\boldsymbol{Q}$ (which penalizes deviations in state) while keeping $\\boldsymbol{R}$ (which penalizes control input) fixed, we can observe how the system behaves under different control strategies.\n",
     "\n",
     "Specifically, we define two LQRs with different weight matrices: \n",
     "\n",
@@ -546,9 +546,9 @@
     "\n",
     "- `LQR_Q=R`: $ \\quad \\boldsymbol{Q}_2 = \\text{diag}([0.1, 0.1]), \\quad \\boldsymbol{R} = 0.1$  \n",
     "\n",
-    "Using these configurations, we simulate the system's response with these two LQRs and compare them with the controller defined in the last step (`LQR_Q=10R`). By observing the results, we gain insight into how adjusting the weight matrices influence the controller's aggressiveness and efficiency.\n",
+    "Using these configurations, we simulate the system's response with these two LQRs and compare them with the controller defined in the previous part (`LQR_Q=10R`). By observing the results, we gain insight into how adjusting the weight matrices influences the controller's aggressiveness and efficiency.\n",
     "\n",
-    "*Note that here we only vary the value of $\\boldsymbol{Q}$. The effect of $\\boldsymbol{R}$ is inverse, as the controller's behavior is fundamentally influenced by the relative magnitude of $\\boldsymbol{Q}$ and $\\boldsymbol{R}$.*"
+    "*Note that here we only vary the value of $\\boldsymbol{Q}$, as the controller's behavior is dependent on the relative magnitude of $\\boldsymbol{Q}$ and $\\boldsymbol{R}$.*"
    ]
   },
   {
@@ -584,7 +584,7 @@
    "source": [
     "#### **Results Analysis: Impact of Weight Matrices on System Performance**\n",
     "\n",
-    "The figure above compares the performance of three Linear Quadratic Regulator (LQR) controllers: **LQR_Q_10**, **LQR_Q_1**, and **LQR_Q_01**. Each controller is defined with different weight matrices $\\boldsymbol{Q}$, which penalize the state deviations, while $\\boldsymbol{R}$, which penalizes control effort, remains the same.\n",
+    "The figure above compares the performance of three LQRs: **LQR_Q_10**, **LQR_Q_1**, and **LQR_Q_01**. Each controller is defined with different weight matrices $\\boldsymbol{Q}$, which penalize the state deviations, while $\\boldsymbol{R}$, which penalizes control effort, remains the same.\n",
     "\n",
     "The comparison clearly demonstrates the impact of the weight matrix $\\boldsymbol{Q}$ on LQR performance:\n",
     "1. **Higher $\\boldsymbol{Q}$** (`LQR_Q=100R`):  \n",
@@ -641,7 +641,7 @@
     "\n",
     "It should first be noted that when attempting to apply an LQR control law to a nonlinear system, regardless of whether the controller ultimately works or not, we must first select an operating point around which to linearize the nonlinear dynamics. This requirement is inherent to the structure of the LQR design. The choice of the linearization point is arbitrary in principle, since at any given state we can always compute a corresponding equilibrium input by setting the right-hand side of the Newtonian dynamics to zero. However, in practice, **the selection of the linearization point can significantly affect the performance of the LQR controller when applied to a nonlinear system**, as will be demonstrated in the examples that follow.\n",
     "\n",
-    "We chosse case 4 as the testbed. The specific curve is shown in the figure below. It can be seen that it consists of a valley and a flat ground. The dynamics of the valley part are nonlinear (the inclination angle is a function of position $p$), while the flat ground part is linear."
+    "We choose case 4 as the testbed. The specific curve is shown in the figure below. It can be seen that it consists of a valley and a flat ground. The dynamics of the valley part are nonlinear (the inclination angle is a function of position $p$), while the flat ground part is linear."
    ]
   },
   {
@@ -664,21 +664,21 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### **Case 1: linearize around the flat ground, drive the car from the top to the valley**\n",
+    "##### **Case 1: Linearize around the flat ground, drive the car from the top to the valley**\n",
     "\n",
     "Let us first consider a relatively simple case: the car starts from flat ground and attempts to stabilize at the bottom of the valley under the action of the LQR control law, which implies that:\n",
     "\n",
     "$$\n",
-    "p_{\\text{start}} = 0.6, \\quad p_{\\text{target}} = -0.5,\n",
+    "p_{\\text{start}} = 0.6, \\quad p_{\\text{target}} = -0.5 \\,.\n",
     "$$\n",
     "\n",
     "Considering that the valley itself is an attractive equilibrium point, the terminal condition is easily satisfied, and thus the linearization point can be directly chosen at the flat ground:\n",
     "\n",
     "$$\n",
-    "\\boldsymbol{\\overline{x}} = [1.0, 0.0]^T,\n",
+    "\\boldsymbol{\\overline{x}} = [1.0, 0.0]^T \\,.\n",
     "$$\n",
     "\n",
-    "Please run the following simulation and observe the results.\n"
+    "Run the following simulation and observe the results.\n"
    ]
   },
   {
@@ -718,15 +718,15 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### **Case 2: linearize around the flat ground, drive the car from the valley to the top**\n",
+    "##### **Case 2: Linearize around the flat ground, drive the car from the valley to the top**\n",
     "\n",
     "Let us slightly increase the difficulty of the task: while still choosing the flat ground as the linearization point, we attempt to use the LQR control law to drive the car from the bottom of the valley toward the right hilltop. The parameters can be set according to the following values:\n",
     "\n",
     "$$\n",
-    "p_{\\text{start}} = -0.5, \\quad p_{\\text{target}} = 0.6, \\quad \\boldsymbol{\\overline{x}} = [1.0, 0.0]^T,\n",
+    "p_{\\text{start}} = -0.5, \\quad p_{\\text{target}} = 0.6, \\quad \\boldsymbol{\\overline{x}} = [1.0, 0.0]^T \\,.\n",
     "$$\n",
     "\n",
-    "Please run the following simulation and see what will happen."
+    "Run the following simulation and see what will happen."
    ]
   },
   {
@@ -766,12 +766,12 @@
    "metadata": {},
    "source": [
     "\n",
-    "##### **Case 3: linearize around a point on the slope, drive the car from the valley to the top**\n",
+    "##### **Case 3: Linearize around a point on the slope, drive the car from the valley to the top**\n",
     "\n",
     "Based on the simulation results of Case 2, we attempt to make some adjustments to the linearization point to observe how it affects the system's response. We move the linearization point to a point on the slope, which implies that:\n",
     "\n",
     "$$\n",
-    "p_{\\text{start}} = -0.5, \\quad p_{\\text{target}} = 0.6, \\quad \\boldsymbol{\\overline{x}} = [0.0, 0.0]^T,\n",
+    "p_{\\text{start}} = -0.5, \\quad p_{\\text{target}} = 0.6, \\quad \\boldsymbol{\\overline{x}} = [0.0, 0.0]^T \\,.\n",
     "$$\n",
     "\n",
     "Rerun the simulation and observe the results."
@@ -813,7 +813,7 @@
    "id": "671287ca",
    "metadata": {},
    "source": [
-    "##### **Results Analysis: influence of the linearization point**\n",
+    "##### **Results Analysis: Influence of the Linearization Point**\n",
     "\n",
     "Summarizing the above three examples, we observe that both the task target and the choice of linearization point affect the performance of applying LQR to a nonlinear system. Specifically:\n",
     "\n",
@@ -823,10 +823,10 @@
     "\n",
     "- **Example 3**: Building upon Example 2, we move the linearization point onto the slope, allowing the LQR to recognize the need to generate additional input to counteract the gravitational component when computing the policy. As a result, the car is able to climb up the slope. However, a drawback is that the car cannot be precisely stabilized at the target point, and a noticeable steady-state error appears. This can be interpreted as a loss of control accuracy caused by model mismatch.  \n",
     "\n",
-    "In summary, although the LQR policy can be applied to nonlinear systems, its performance cannot be guaranteed. Therefore, when making such attempts, it is crucial to **carefully select the linearization point** to improve performance as much as possible and to mitigate the losses caused by model mismatch.\n",
+    "In summary, although the LQR policy can be applied to nonlinear systems, its performance can be limited. Therefore, when making such attempts, it is crucial to **carefully select the linearization point** to improve performance as much as possible and to mitigate the issues caused by the model mismatch.\n",
     "\n",
     "\n",
-    "*Note: The loss of accuracy in nonlinear systems can be mitigated by applying the **iterative LQR (iLQR)** method (which will be introduced in the next Lecture). The key idea of iLQR is to perform a Taylor expansion of the cost function and dynamics around each operating point, incorporating higher-order derivatives into the optimization process. In fact, LQR can be viewed as a special case of iLQR when the system dynamics are linear.*\n",
+    "*Note: The loss of accuracy in nonlinear systems can be mitigated by applying the **iterative LQR (iLQR)** method (which will be introduced in the next lecture). The key idea of iLQR is to perform a Taylor expansion of the cost function and dynamics around each operating point, incorporating higher-order derivatives into the optimization process. In fact, LQR can be viewed as a special case of iLQR when the system dynamics are linear.*\n",
     "\n",
     "<br>"
    ]
@@ -836,9 +836,16 @@
    "id": "a69c4bba",
    "metadata": {},
    "source": [
-    "<blockquote style=\"padding-top: 20px; padding-bottom: 10px;\">\n",
+    "<blockquote style=\"\n",
+    "    padding: 18px 20px;\n",
+    "    margin: 1.2em 0;\n",
+    "    background: rgba(56, 139, 253, 0.12);      \n",
+    "    border-left: 4px solid rgba(56, 139, 253, 0.85);\n",
+    "    border-radius: 6px;\n",
+    "    color: inherit !important;                  \n",
+    "\">\n",
     "\n",
-    "##### **Extension Questions: Overshoot when applying LQR to nonlinear cases**\n",
+    "##### **Questions: Overshoot When Applying LQR to Nonlinear Cases**\n",
     "\n",
     "When applying LQR to nonlinear systems, it is common to observe that the resulting trajectory exhibits overshoot or even fails to reach the desired goal. In some cases, the system may stabilize at a steady-state far from the target.\n",
     "\n",
@@ -850,25 +857,13 @@
     "\n",
     "*Hint: Compute the steady-state of the closed-loop system. In this case you should use the nonlinear dynamics and substitute the LQR policy $\\boldsymbol{u} = \\boldsymbol{K} \\boldsymbol{x}$ for the input. For the steady-state the velocity $v_{\\text{steady}} = 0$. Then compute the position $p_{\\text{steady}}$.*\n",
     "\n",
-    "</blockquote> \n",
-    "\n",
-    "<br>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "551bb4e7",
-   "metadata": {},
-   "source": [
-    "##### **Question:**\n",
-    "\n",
-    "For Example 3, is there a way to design the LQR such that the car can move uphill along the slope and precisely stop at the target point without exhibiting any steady-state error?\n",
+    "**Open question 3**: For Example 3, is there a way to design the LQR such that the car can move uphill along the slope and precisely stop at the target point without exhibiting any steady-state error?\n",
     "\n",
     "*Hint: think about a time-varying policy*\n",
     "\n",
+    "</blockquote> \n",
     "\n",
-    "\n",
-    "----"
+    "<br>\n"
    ]
   },
   {
@@ -879,7 +874,7 @@
     "\n",
     "#### **Example 4.2: Effect of Input Constraints on LQR Performance**\n",
     "\n",
-    "LQR is formulated under the assumption of **unconstrained inputs**, meaning it does not inherently support input saturation or upper/lower constraints. However, in real-world systems, control inputs such as force, torque, or voltage often have physical limits. When the LQR generates control inputs exceeding these limits, the inputs will be **clipped** to the boundaries. This behavior can cause a mismatch between the actual system trajectory and the ideal trajectory predicted by the LQR.\n",
+    "LQR is formulated under the assumption of **unconstrained inputs**, meaning it does not inherently support input saturation or upper/lower bounds. However, in real-world systems, control inputs such as force, torque, or voltage often have physical limits. When the LQR generates control inputs exceeding these limits, the inputs will be **clipped** to the boundaries. This behavior can cause a mismatch between the actual system trajectory and the ideal trajectory predicted by the LQR.\n",
     "\n",
     "To illustrate this limitation, we design two test scenarios:\n",
     "\n",
@@ -947,7 +942,7 @@
     "#### **Results Analysis**\n",
     "\n",
     "1. **Input Response**:  \n",
-    "   - In the input plot (right panel), the ideal LQR (red dashed line) generates a continuous and reasonable input.  \n",
+    "   - In the input plot (right panel), the ideal LQR (red dashed line) generates a continuous input.  \n",
     "   - However, the clipped LQR (blue solid line) shows clear cut-off behavior, where the input is clipped to the specified upper and lower bounds (gray shaded regions). This results in a flattened profile that deviates from the ideal input.\n",
     "\n",
     "2. **Position Response**:  \n",
@@ -1030,7 +1025,7 @@
     "#### **Results Analysis**\n",
     "\n",
     "1. **Input Response**:  \n",
-    "   - In the input plot (right panel), the ideal LQR (red dashed line) generates a reasonable input where a larger control effort is required when the system is far from the target, whereas the required input decreases as the system approaches the target.\n",
+    "   - In the input plot (right panel), the ideal LQR (red dashed line) generates an increased control input where a larger control effort is required when the system is far from the target, whereas the required input decreases as the system approaches the target.\n",
     "   - However, the clipped LQR (blue solid line) shows clear cut-off behavior, where the input is clipped to (and consistently bounded by) the specified upper bound (gray shaded region).\n",
     "\n",
     "2. **Position Response**:  \n",
