--- a/ex4_iLQR/4.1_iterative_linear_quadratic_regulator.ipynb
+++ b/ex4_iLQR/4.1_iterative_linear_quadratic_regulator.ipynb
@@ -14,8 +14,13 @@
     "\n",
     "All the contents are summarized in the table below.  \n",
     "\n",
-    "<table border=\"1\" style=\"border-collapse: collapse; text-align: center;\">\n",
-    "  <!-- Title Row -->\n",
+    "<style>\n",
+    "  table td:nth-child(2) {\n",
+    "    text-align: left;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
+    "<table border=\"1\" style=\"border-collapse: collapse;\">  <!-- Title Row -->\n",
     "  <tr>\n",
     "    <th colspan=\"2\" style=\"text-align:center\">Content of Chapter 4 Exercise</th>\n",
     "  </tr>\n",
@@ -494,7 +499,7 @@
     "\n",
     "5\\) Instantiate the class `Simulator` for ILQR and call function `run_simulation()` to generate the simulated state- and input-trajectory;\n",
     "\n",
-    "6\\) Instantiate the class `Visualizer` for ILQR, call function `display_final_results()` and `display_animation()` to show the simulations;\n"
+    "6\\) Instantiate the class `Visualizer` for ILQR, call function `display_plots()` and `display_animation()` to show the simulations;\n"
    ]
   },
   {
