--- a/ex5_MPC/5.1_model_predictive_control_part1.ipynb
+++ b/ex5_MPC/5.1_model_predictive_control_part1.ipynb
@@ -19,8 +19,13 @@
     "All the contents are summarized in the table below.  \n",
     "\n",
     "\n",
-    "<table border=\"1\" style=\"border-collapse: collapse; text-align: center;\">\n",
-    "  <!-- Title Row -->\n",
+    "<style>\n",
+    "  table td:nth-child(2) {\n",
+    "    text-align: left;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
+    "<table border=\"1\" style=\"border-collapse: collapse;\">  <!-- Title Row -->\n",
     "  <tr>\n",
     "    <th colspan=\"2\" style=\"text-align:center\">Content of Chapter 5.1 Exercise</th>\n",
     "  </tr>\n",
@@ -631,10 +636,10 @@
     "\n",
     "The lifted form offers the following benefits:\n",
     "\n",
-    "- ✅ It transforms the MPC problem into a **structured QP** with a standard form:  \n",
-    "- ✅ It enables the use of **off-the-shelf QP solvers** (e.g. `cvxopt`, `qpoases`, `osqp`) with minimal modification\n",
-    "- ✅ It clarifies the roles of each part of the problem (cost, dynamics, constraints) via matrix structure\n",
-    "- ✅ It easily supports extensions, such as soft constraints, time-varying references, and warm-starting\n",
+    "- It transforms the MPC problem into a **structured QP** with a standard form:  \n",
+    "- It enables the use of **off-the-shelf QP solvers** (e.g. `cvxopt`, `qpoases`, `osqp`) with minimal modification\n",
+    "- It clarifies the roles of each part of the problem (cost, dynamics, constraints) via matrix structure\n",
+    "- It easily supports extensions, such as soft constraints, time-varying references, and warm-starting\n",
     "\n",
     "##### **a) State and Input Variable in Lifted Form**\n",
     "\n",
@@ -968,13 +973,13 @@
     "\n",
     "#### **Example 2.2: Simulation and Visualization**  \n",
     "\n",
-    "1\\) Specify the arguments and instantiate the controller class `LinearMPCController` as `LMPC`; \n",
+    "1\\) Specify the arguments and instantiate the controller class `LinearMPCController`:\n",
     "\n",
     "- Parameters in the controller design:  \n",
     "\n",
     "    i) weight for state $\\bm{Q} = \\text{diag}([1, 1])$ (requirement: symmetric, positive semi-definite matrix)  \n",
     "\n",
-    "    ii) weight for input $\\bm{R} = [0.1]$ (requirement: symmetric, positive definite matrix)  \n",
+    "    ii) weight for input $\\bm{R} = 0.1$ (requirement: symmetric, positive definite matrix)  \n",
     "    \n",
     "    iii) control frequency $f = 20$\n",
     "\n",
@@ -982,7 +987,7 @@
     "\n",
     "2\\) Instantiate the class `Simulator` and call function `run_simulation()` to generate the simulated state- and input-trajectory;\n",
     "\n",
-    "3\\) Instantiate the class `Visualizer`, call function `display_final_results()` and `display_animation()` to show the simulations;"
+    "3\\) Instantiate the class `Visualizer` and call functions `display_plots()` and `display_animation()` to show the simulations;"
    ]
   },
   {
@@ -1697,7 +1702,7 @@
     "\n",
     "3\\) Instantiate the class `Simulator` and call function `run_simulation()` to generate the simulated state- and input-trajectory;\n",
     "\n",
-    "4\\) Instantiate the class `Visualizer`, call function `display_final_results()` and `display_animation()` to show the simulations;\n"
+    "4\\) Instantiate the class `Visualizer`, call function `display_plots()` and `display_animation()` to show the simulations;\n"
    ]
   },
   {
