--- a/ex5_MPC/5.2_model_predictive_control_part2.ipynb
+++ b/ex5_MPC/5.2_model_predictive_control_part2.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### **Chapter 5.2: MPC for Tracking Task and Robuct MPC**\n",
+    "### **Chapter 5.2: MPC for Tracking Task and Robust MPC**\n",
     "\n",
     "\n",
     "\n",
@@ -20,8 +20,13 @@
     "All the contents are summarized in the table below.  \n",
     "\n",
     "\n",
-    "<table border=\"1\" style=\"border-collapse: collapse; text-align: center;\">\n",
-    "  <!-- Title Row -->\n",
+    "<style>\n",
+    "  table td:nth-child(2) {\n",
+    "    text-align: left;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
+    "<table border=\"1\" style=\"border-collapse: collapse;\">  <!-- Title Row -->\n",
     "  <tr>\n",
     "    <th colspan=\"2\" style=\"text-align:center\">Content of Chapter 5.2 Exercise</th>\n",
     "  </tr>\n",
