--- a/ex6_SysID/6.2_Learning_Based_MPC.ipynb
+++ b/ex6_SysID/6.2_Learning_Based_MPC.ipynb
@@ -26,8 +26,13 @@
     "\n",
     "All the contents are summarized in the table below.  \n",
     "\n",
-    "<table border=\"1\" style=\"border-collapse: collapse; text-align: center;\">\n",
-    "  <!-- Title Row -->\n",
+    "<style>\n",
+    "  table td:nth-child(2) {\n",
+    "    text-align: left;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
+    "<table border=\"1\" style=\"border-collapse: collapse;\">  <!-- Title Row -->\n",
     "  <tr>\n",
     "    <th colspan=\"2\" style=\"text-align:center\">Content of Chapter 6.2 Exercise</th>\n",
     "  </tr>\n",
