--- a/ex7_RL/7.2_mfrl.ipynb
+++ b/ex7_RL/7.2_mfrl.ipynb
@@ -14,8 +14,13 @@
     "All the contents are summarized in the table below.  \n",
     "\n",
     "\n",
-    "<table border=\"1\" style=\"border-collapse: collapse; text-align: center;\">\n",
-    "  <!-- Title Row -->\n",
+    "<style>\n",
+    "  table td:nth-child(2) {\n",
+    "    text-align: left;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
+    "<table border=\"1\" style=\"border-collapse: collapse;\">  <!-- Title Row -->\n",
     "  <tr>\n",
     "    <th colspan=\"2\" style=\"text-align:center\">Content of Chapter 7.2 Exercise</th>\n",
     "  </tr>\n",
