refactored mb-rl

--- a/ex7_RL/7.1_mbrl.ipynb
+++ b/ex7_RL/7.1_mbrl.ipynb
@@ -14,8 +14,13 @@
     "All the contents are summarized in the table below.  \n",
     "\n",
     "\n",
-    "<table border=\"1\" style=\"border-collapse: collapse; text-align: center;\">\n",
-    "  <!-- Title Row -->\n",
+    "<style>\n",
+    "  table td:nth-child(2) {\n",
+    "    text-align: left;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
+    "<table border=\"1\" style=\"border-collapse: collapse;\">  <!-- Title Row -->\n",
     "  <tr>\n",
     "    <th colspan=\"2\" style=\"text-align:center\">Content of Chapter 7.1 Exercise</th>\n",
     "  </tr>\n",
@@ -44,7 +49,7 @@
     "  <!-- Row group 3 -->\n",
     "  <tr>\n",
     "    <td rowspan=\"2\">Discretization II</td>\n",
-    "    <td>Example 3.1:Linear Interpolation Approach</td>\n",
+    "    <td>Example 3.1: Linear Interpolation Approach</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "  </tr>\n",
@@ -80,7 +85,6 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "import matplotlib\n",
     "import numpy as np\n",
     "import casadi as ca\n",
     "from functools import wraps\n",
@@ -90,66 +94,10 @@
     "from utils.controller import *\n",
     "from utils.simulator import *\n",
     "from ex5_MPC.mpc_utils import *\n",
+    "from ex6_RL.rl_utils import define_shifted_colormap\n",
     "\n",
     "\n",
-    "def shiftedColorMap(cmap, start=0, midpoint=0.5, stop=1.0, name='shiftedcmap'):\n",
-    "    '''\n",
-    "    Function to offset the \"center\" of a colormap. Useful for\n",
-    "    data with a negative min and positive max and you want the\n",
-    "    middle of the colormap's dynamic range to be at zero.\n",
-    "\n",
-    "    From: https://stackoverflow.com/questions/7404116/defining-the-midpoint-of-a-colormap-in-matplotlib\n",
-    "\n",
-    "    Input\n",
-    "    -----\n",
-    "      cmap : The matplotlib colormap to be altered\n",
-    "      start : Offset from lowest point in the colormap's range.\n",
-    "          Defaults to 0.0 (no lower offset). Should be between\n",
-    "          0.0 and `midpoint`.\n",
-    "      midpoint : The new center of the colormap. Defaults to \n",
-    "          0.5 (no shift). Should be between 0.0 and 1.0. In\n",
-    "          general, this should be  1 - vmax / (vmax + abs(vmin))\n",
-    "          For example if your data range from -15.0 to +5.0 and\n",
-    "          you want the center of the colormap at 0.0, `midpoint`\n",
-    "          should be set to  1 - 5/(5 + 15)) or 0.75\n",
-    "      stop : Offset from highest point in the colormap's range.\n",
-    "          Defaults to 1.0 (no upper offset). Should be between\n",
-    "          `midpoint` and 1.0.\n",
-    "    '''\n",
-    "    cdict = {\n",
-    "        'red': [],\n",
-    "        'green': [],\n",
-    "        'blue': [],\n",
-    "        'alpha': []\n",
-    "    }\n",
-    "\n",
-    "    # regular index to compute the colors\n",
-    "    reg_index = np.linspace(start, stop, 257)\n",
-    "\n",
-    "    # shifted index to match the data\n",
-    "    shift_index = np.hstack([\n",
-    "        np.linspace(0.0, midpoint, 128, endpoint=False), \n",
-    "        np.linspace(midpoint, 1.0, 129, endpoint=True)\n",
-    "    ])\n",
-    "\n",
-    "    for ri, si in zip(reg_index, shift_index):\n",
-    "        r, g, b, a = cmap(ri)\n",
-    "\n",
-    "        cdict['red'].append((si, r, r))\n",
-    "        cdict['green'].append((si, g, g))\n",
-    "        cdict['blue'].append((si, b, b))\n",
-    "        cdict['alpha'].append((si, a, a))\n",
-    "\n",
-    "    newcmap = matplotlib.colors.LinearSegmentedColormap(name, cdict)\n",
-    "    # plt.register_cmap(cmap=newcmap)\n",
-    "    matplotlib.colormaps.register(name=name, cmap=newcmap)\n",
-    "\n",
-    "    return newcmap\n",
-    "\n",
-    "\n",
-    "orig_cmap = matplotlib.cm.coolwarm\n",
-    "midpoint = 1 - 10 / (10 + 1)\n",
-    "shifted_cmap = shiftedColorMap(orig_cmap, midpoint=midpoint, name='shifted')"
+    "shifted_cmap = define_shifted_colormap()"
    ]
   },
   {
@@ -234,7 +182,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "### **Part 1: Discretization I, Nearest Neighbour Appraoch**\n",
+    "### **Part 1: Discretization I, Nearest Neighbor Appraoch**\n",
     "\n",
     "A Markov decision process (MDP), is the main assumption in RL. An MDP is the tuple $(\\mathcal{X}, \\mathcal{U}, p, r)$, where $\\mathcal{X}$ is the discrete set of states, $\\mathcal{U}$ is the discrete set of actions (can be state-dependent), $p$ describes the transition probabilities (conditional probability on the next state $x'$ given a state $x$ and an action $u$: $p(x' \\vert x, u)$), and $r$ represents the reward for each transition with $r(x, u, x')$.  \n",
     "\n",
@@ -493,11 +441,20 @@
    "source": [
     "Since the arrays that hold the transition probabilities and the rewards are high dimensional, you are encouraged to try different values for the `state_id` and the `action_id` (although the deterministic case won't provide too many surprises). \n",
     "\n",
-    "<blockquote style=\"padding-top: 20px; padding-bottom: 10px;\">\n",
+    "<blockquote style=\"\n",
+    "    padding: 18px 20px;\n",
+    "    margin: 1.2em 0;\n",
+    "    background: rgba(56, 139, 253, 0.12);      \n",
+    "    border-left: 4px solid rgba(56, 139, 253, 0.85);\n",
+    "    border-radius: 6px;\n",
+    "    color: inherit !important;                  \n",
+    "\">\n",
     "\n",
-    "##### **🔍 Hands-on Exploration: Stochastic MDP from Nearest Neighbor**\n",
+    "##### **Hands-on Exploration: Stochastic MDP from Nearest Neighbor**\n",
     "\n",
-    "Experiment with the amount of noise added to the state and control inputs to record the state transitions and vary the number of sampled points. this will lead to a stochastic MDP instead of a deterministic one. What do you observe? Can the added noise make up for the coarse discretization?"
+    "Experiment with the amount of noise added to the state and control inputs to record the state transitions and vary the number of sampled points. this will lead to a stochastic MDP instead of a deterministic one. What do you observe? Can the added noise make up for the coarse discretization?\n",
+    "\n",
+    "</blockquote>"
    ]
   },
   {
@@ -564,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we run value iteration, we will fix the discount factor $\\gamma$ for the remainder of the notebook. We encourage you to play around with different values for $\\gamma$. What effects can you observe?"
+    "Before we run value iteration, we will fix the discount factor $\\gamma$ for the remainder of the notebook. "
    ]
   },
   {
@@ -694,11 +651,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<blockquote style=\"padding-top: 20px; padding-bottom: 10px;\">\n",
+    "<blockquote style=\"\n",
+    "    padding: 18px 20px;\n",
+    "    margin: 1.2em 0;\n",
+    "    background: rgba(56, 139, 253, 0.12);      \n",
+    "    border-left: 4px solid rgba(56, 139, 253, 0.85);\n",
+    "    border-radius: 6px;\n",
+    "    color: inherit !important;                  \n",
+    "\">\n",
     "\n",
-    "##### **🔍 Hands-on Exploration: Discount Factor $\\gamma$**\n",
+    "##### **Hands-on Exploration: Discount Factor $\\gamma$**\n",
     "\n",
-    "To gain a better understanding of the discount factor, try running the cells for smaller and larger values of $\\gamma$. Recall that $\\gamma \\in \\left(0, 1\\right)$. What do you observe? What is the impact of the discount factor? "
+    "To gain a better understanding of the discount factor, try running the cells for smaller and larger values of $\\gamma$. Recall that $\\gamma \\in \\left(0, 1\\right)$. What do you observe? What is the impact of the discount factor? \n",
+    "\n",
+    "</blockquote>"
    ]
   },
   {
@@ -877,11 +843,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<blockquote style=\"padding-top: 20px; padding-bottom: 10px;\">\n",
+    "<blockquote style=\"\n",
+    "    padding: 18px 20px;\n",
+    "    margin: 1.2em 0;\n",
+    "    background: rgba(56, 139, 253, 0.12);      \n",
+    "    border-left: 4px solid rgba(56, 139, 253, 0.85);\n",
+    "    border-radius: 6px;\n",
+    "    color: inherit !important;                  \n",
+    "\">\n",
     "\n",
-    "##### **🔍 Hands-on Exploration: Discretization Approaches**\n",
+    "##### **Hands-on Exploration: Discretization Approaches**\n",
     "\n",
-    "Compare the resulting slices for the nearest neighbor approach and the linear intepolation approach. What do you see? How do they differ? When would you choose which approach? "
+    "Compare the resulting slices for the nearest neighbor approach and the linear intepolation approach. What do you see? How do they differ? When would you choose which approach?\n",
+    "\n",
+    "</blockquote>"
    ]
   },
   {
@@ -934,7 +909,7 @@
     "\n",
     "### **Part 4: Policy Iteration**\n",
     "\n",
-    "The Bellman equation can be used to derive different algorithms to find the optimal value function and policy. Another algorithm is the policy iteration algorithm. Following the lecture notes, the algorithm is implmented in the following cell. "
+    "The Bellman equation can be used to derive different algorithms to find the optimal value function and policy. Another algorithm is the policy iteration algorithm. Following the lecture notes, the algorithm is implemented in the following cell. "
    ]
   },
   {
@@ -1162,13 +1137,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<blockquote style=\"padding-top: 20px; padding-bottom: 10px;\">\n",
+    "<blockquote style=\"\n",
+    "    padding: 18px 20px;\n",
+    "    margin: 1.2em 0;\n",
+    "    background: rgba(56, 139, 253, 0.12);      \n",
+    "    border-left: 4px solid rgba(56, 139, 253, 0.85);\n",
+    "    border-radius: 6px;\n",
+    "    color: inherit !important;                  \n",
+    "\">\n",
     "\n",
-    "##### **🔍 Hands-on Exploration: Value and Policy Iteration Variants**\n",
+    "##### **Hands-on Exploration: Value and Policy Iteration Variants**\n",
     "\n",
-    "1. The utils.py include an implementation of generalized policy iteration (GPI) as introduced in the lecture notes. Can you make GPI behave like value iteration of policy iteration for the nonlinear case? \n",
+    "1. The rl_utils.py includes an implementation of generalized policy iteration (GPI) as introduced in the lecture notes. Can you make GPI behave like value iteration or policy iteration for the nonlinear case? \n",
     "\n",
-    "2. Implement the Gauss-Seidel approach. What do you observe when you use this modification when calculating the policy? "
+    "2. Implement the Gauss-Seidel approach. What do you observe when you use this modification when calculating the policy? \n",
+    "\n",
+    "</blockquote>"
    ]
   },
   {
@@ -1244,11 +1228,20 @@
    "source": [
     "Both approaches lead the mountain car to the top of the hill. The model-based RL determines a policy over the state space offline while the MPC only determines an input for the current state online. Therefore, RL requires significant computation offline but its execution online is fast.\n",
     "\n",
-    "<blockquote style=\"padding-top: 20px; padding-bottom: 10px;\">\n",
+    "<blockquote style=\"\n",
+    "    padding: 18px 20px;\n",
+    "    margin: 1.2em 0;\n",
+    "    background: rgba(56, 139, 253, 0.12);      \n",
+    "    border-left: 4px solid rgba(56, 139, 253, 0.85);\n",
+    "    border-radius: 6px;\n",
+    "    color: inherit !important;                  \n",
+    "\">\n",
     "\n",
-    "##### **🔍 Hands-on Exploration: Model Mismatch**\n",
+    "##### **Hands-on Exploration: Model Mismatch**\n",
     "\n",
-    "Consider the case where the MDP does not precisely model the environment. What happens if you use an MDP designed for the linear case but apply it to the system with the nonlinear slope? Is the RL policy still able to achieve the stabilization goal? "
+    "Consider the case where the MDP does not precisely model the environment. What happens if you use an MDP designed for the linear case but apply it to the system with the nonlinear slope? Is the RL policy still able to achieve the stabilization goal?\n",
+    "\n",
+    "</blockquote>"
    ]
   }
  ],
